# mprpc

./: CMakeLists.txt  git.ignore
example/: friend.proto  user.proto
example/callee/: CMakeLists.txt  friendservice.cc  userservice.cc
example/caller/: CMakeLists.txt  callfriendservice.cc  callfriendservixe.cc  calluserservice.cc
lib/include/: lockqueue.h  logger.h  mprpcapplication.h  mprpcchannel.h  mprpcconfig.h  zookeeper.h
src/: CMakeLists.txt  logger.cc  mprpcapplication.cc  mprpcchannel.cc  mprpcconfig.cc  rpcheader.pb.cc  rpcheader.proto  rpcprovider.cc  zookeeperutil.cc
src/include/: rpcprovider.h  zookeeperutil.h
test/protobuf/: main.cc  test.pb.cc  test.pb.h  test.proto
